--- a/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/components/PhotoItemComponent/PhotoItem.css
+++ b/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/components/PhotoItemComponent/PhotoItem.css
@@ -1,15 +1,19 @@
+/*  */
 .photo_item img {
     width: 100%;
 }
 
+/*  */
 #home .photo_item h2 {
     margin-bottom: .2em;
 }
 
+/*  */
 .photo_author {
     text-align: left;
 }
 
+/*  */
 .photo_author a {
     font-weight: bold;
 }
