--- a/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Auth/Auth.css
+++ b/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Auth/Auth.css
@@ -8,6 +8,7 @@
     margin: 2em auto;
 }
 
+/*  */
 #login h2,
 #register h2 {
     text-align: center;
@@ -15,12 +16,14 @@
     margin-top: 0;
 }
 
+/*  */
 .subtitle {
     font-weight: bold;
     color: #999;
     margin-bottom: 1.5em;
 }
 
+/*  */
 #login form,
 #register form {
     padding-bottom: 1.5em;
@@ -28,11 +31,13 @@
     border-bottom: 1px solid #363636;
 }
 
+/*  */
 #login p,
 #register p {
     text-align: center;
 }
 
+/*  */
 #login p a,
 #register p a {
     font-weight: bold;
