--- a/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/EditProfile/EditProfile.css
+++ b/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/EditProfile/EditProfile.css
@@ -8,10 +8,12 @@
     text-align: center;
 }
 
+/*  */
 .subtitle {
     color: #ccc;
 }
 
+/*  */
 .profile_image {
     width: 150px;
     height: 150px;
