--- a/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Photo/Photo.css
+++ b/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Photo/Photo.css
@@ -6,29 +6,35 @@
     margin-top: 2em;
 }
 
+/*  */
 #photo img {
     width: 100%;
 }
 
+/*  */
 .message_container {
     margin: 1em 0;
 }
 
+/*  */
 .comments {
     text-align: left;
 }
 
+/*  */
 .comments form {
     margin-bottom: 2em;
     padding-bottom: 1em;
     border-bottom: 1px solid #363636;
 }
 
+/*  */
 .author {
     display: flex;
     font-weight: bold;
 }
 
+/*  */
 #photo .author img {
     width: 50px;
     height: 50px;
