--- a/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Profile/Profile.css
+++ b/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Profile/Profile.css
@@ -5,6 +5,7 @@
     margin: 0 auto;
 }
 
+/*  */
 .profile_header {
     display: flex;
     align-items: center;
@@ -13,6 +14,7 @@
     border-bottom: 1px solid #363636;
 }
 
+/*  */
 .profile_header img {
     width: 100px;
     height: 100px;
@@ -20,39 +22,47 @@
     margin-right: 2em;
 }
 
+/*  */
 .new_photo {
     padding: 1em;
     border-bottom: 1px solid #363636;
 }
 
+/*  */
 .photo_container {
     display: flex;
     flex-wrap: wrap;
 }
 
+/*  */
 .photo {
     width: 32%;
     margin: 0.3%;
 }
 
+/*  */
 .photo img {
     width: 100%;
 }
 
+/*  */
 .actions {
     display: flex;
     justify-content: space-around;
     padding: 10px;
 }
 
+/*  */
 .actions svg {
     cursor: pointer;
 }
 
+/*  */
 .edit_photo {
     margin-bottom: 1em;
 }
 
+/*  */
 .edit_photo img {
     width: 100%;
     margin-bottom: 1em;
