--- a/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Search/Search.css
+++ b/Secao12-Projeto_ReactGram-React_Redux_Express_MongoDB_Mongoose_e_mais/frontend/src/pages/Search/Search.css
@@ -6,10 +6,12 @@
     padding-top: 2em;
 }
 
+/*  */
 #search h2 {
     text-align: center;
 }
 
+/*  */
 #search .btn {
     display: block;
     max-width: 80px;
